--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,229 +1,227 @@
-.main {
+.header {
+  width: 100%;
+  padding: 30px;
+}
+.header .col {
   display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  right: 30px;
+  z-index: 1;
+}
+.header .colRight {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: #1c1e23;
+}
+.header .colRight a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+}
+.sections {
+  margin-top: 0rem;
+  padding: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
+}
+#center_main {
+  width: 100%;
+  position: relative;
+}
+#center_main .float {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+}
+#center_main .chat1,
+.chat2 img {
+  user-select: none;
+  pointer-events: none;
+}
+#center_main .chat2 {
+  margin-top: 3rem;
+}
+#center_main h1 {
+  font-size: 4rem;
+  color: #fafdf5;
+  text-align: center;
+  margin-top: 3rem;
+}
+#center_main .mainBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.mainBtn #try {
+  padding: 18px 45px;
+  border-radius: 50px;
+  background-image: linear-gradient(
+    0deg,
+    hsl(209deg 43% 90%) 0%,
+    hsl(209deg 51% 90%) 21%,
+    hsl(208deg 56% 89%) 30%,
+    hsl(210deg 63% 89%) 39%,
+    hsl(209deg 67% 89%) 46%,
+    hsl(209deg 75% 89%) 54%,
+    hsl(209deg 82% 89%) 61%,
+    hsl(208deg 86% 89%) 69%,
+    hsl(209deg 93% 89%) 79%,
+    hsl(209deg 100% 89%) 100%
+  );
+  color: #23252b;
+  font-weight: 600;
+  outline: none;
+  border: none;
+  font-size: 1.4rem;
+  cursor: pointer;
+}
+.mainBtn #try:hover {
+  background-image: linear-gradient(
+    210deg,
+    hsl(209deg 43% 90%) 0%,
+    hsl(209deg 51% 90%) 21%,
+    hsl(208deg 56% 89%) 30%,
+    hsl(210deg 63% 89%) 39%,
+    hsl(209deg 67% 89%) 46%,
+    hsl(209deg 75% 89%) 54%,
+    hsl(209deg 82% 89%) 61%,
+    hsl(208deg 86% 89%) 69%,
+    hsl(209deg 93% 89%) 79%,
+    hsl(209deg 100% 89%) 100%
+  );
+}
+#codingChallenges {
+  margin-top: 20rem;
+}
+#jobBoard {
+  margin-top: 5rem;
+}
+#talkDev {
+  margin-top: 5rem;
+}
+.codCol {
+  display: flex;
+  align-items: normal;
+  gap: 2rem;
+}
+.codeColLeft h3 {
+  font-size: 2rem;
+  color: #fff;
+}
+.codeColLeft p {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  color: #9299aa;
+}
+#faq {
+  margin-top: 8rem;
+}
+.faqHeader h3 {
+  font-size: 3rem;
+  color: #fff;
+  text-align: center;
+}
+.accBx {
+  margin-top: 3rem;
+}
+.AccordionTrigger {
+  padding: 20px;
+  background-color: #23252b;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.AccordionTrigger h5 {
+  color: #fff;
+  font-size: 1.6rem;
 }
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.AccordionContent {
+  padding: 20px;
+  background-color: #23252b;
+  cursor: pointer;
+  margin-top: -5rem;
+  opacity: 0;
+  transition: all 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  pointer-events: none;
 }
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.AccordionContent#active {
+  margin-top: -0.9rem;
+  opacity: 1;
+  pointer-events: auto;
 }
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.AccordionContent span {
+  font-size: 1.2rem;
+  color: #d9dde7;
 }
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+#twitter_x {
+  margin-top: 3rem;
 }
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+@media screen and (max-width: 830px) {
+  #center_main .float {
+    display: none;
+    gap: 0rem;
   }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
+  #center_main h1 {
+    font-size: 7vw;
+    color: #fff;
     text-align: center;
+    margin-top: 3rem;
   }
-
-  .card {
-    padding: 1rem 2.5rem;
+  .mainBtn #try {
+    font-size: 6vw;
   }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
+  .sections {
+    margin-top: 0rem;
+    padding: 30px;
     display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+    justify-content: center;
+    flex-direction: column;
   }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
+  .header {
+    width: 100%;
+    padding: 20px;
   }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+  .codCol {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 2rem;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
+  .codCol .codeColRight img {
+    width: 100%;
+    height: 100%;
   }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+  .codCol .codeColRight video {
+    width: 100%;
+    height: 100%;
   }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
+  .codeColLeft h3 {
+    font-size: 8vw;
   }
-  to {
-    transform: rotate(0deg);
+  .codeColLeft p {
+    font-size: 5vw;
+  }
+  .faqHeader h3 {
+    font-size: 8vw;
+  }
+  .AccordionTrigger h5 {
+    color: #fff;
+    font-size: 5vw;
+  }
+  .AccordionContent span {
+    font-size: 4vw;
+    color: #d9dde7;
   }
 }
