--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
 @layer base {
   :root {
     --background: 0 0% 100%;
