--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +8,7 @@
   --header-bg: rgb(14, 14, 15);
   --foter-bg: #141417;
   --bab: #58469c;
+  --ogx: #311e6a;
   --shadown-turner: rgba(38, 35, 230, 0.105);
 }
 * {
@@ -21,7 +23,8 @@
   scroll-padding-block: 0;
 }
 body {
-  background: var(--main-bg);
+  background: rgb(56,39,107);
+background: radial-gradient(circle, rgba(56,39,107,1) 50%, rgba(1,2,3,1) 100%);
   scroll-behavior: smooth;
   font-family: "Inter", sans-serif;
 }
@@ -38,5 +41,4 @@ body {
   /* text-align: center; */
   /* font-size: nor; */
   background: transparent;
-
 }
